# keras_image_predictor

./: CMakeLists.txt  README.md  package.xml  setup.py
docker/: docker-compose.yml
docker/arm/: Dockerfile
docker/x86/: Dockerfile
launch/: example.launch  rgb.model
scripts/: predictor_node.py
